# nctl

./: .gitignore  README.md  example.nctl.toml  pyproject.toml
docs/: add-a-basic-service.md  compatibility.md  event-log.md  output-format.md  register-a-new-pc.md  usage_example.md
src/nctl_core/: __init__.py  ansible.py  artifacts.py  braindump.py  config.py  dashboard_render.py  dnsmasq.py  dnsmasq_apply.py  dnsmasq_query.py  dnsmasq_render.py  drift_render.py  dumps.py  events.py  hosts_intent.py  hosts_intent_render.py  inventory_trust.py  inventory_write.py  jobs.py  lifecycle.py  names.py  nautobot.py  observation.py  operations_index.py  ops_render.py  (+7 more)
tests/: test_ansible.py  test_artifacts.py  test_braindump.py  test_cli_apply_dnsmasq.py  test_cli_braindump.py  test_cli_dashboard.py  test_cli_drift.py  test_cli_lifecycle.py  test_cli_ops.py  test_cli_render_dnsmasq.py  test_cli_render_hosts_intent.py  test_cli_render_production.py  test_cli_serve.py  test_cli_session.py  test_cli_ssh_enroll.py  test_cli_status.py  test_compatibility_snapshots.py  test_config.py  test_dashboard_html.py  test_dashboard_push.py  test_dashboard_render.py  test_dnsmasq.py  test_dnsmasq_apply.py  test_dnsmasq_query.py  test_dnsmasq_render.py  test_drift_comparators.py  test_drift_engine.py  test_drift_evaluation.py  test_drift_evaluation_snapshot.py  test_drift_operations.py  test_drift_registry.py  test_drift_render.py  test_drift_status.py  test_dumps.py  test_events.py  test_events_bus.py  test_hosts_intent.py  test_hosts_intent_render.py  test_inventory_trust.py  test_jobs.py  (+39 more)
(+49 files in other folders)
