[project]
name = "nctl"
version = "0.0.1"
description = "Unified CLI for pj-clusterintent: desired/actual reconciliation and standard workflows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
serve = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
]

[project.scripts]
nctl = "nctl_core.cli.main:app"

[dependency-groups]
dev = [
    "fastapi>=0.115",
    "pytest>=8.0",
    "respx>=0.21",
    "uvicorn[standard]>=0.34",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nctl_core"]
